# OpenGL-renderer-in-C

./: .gitignore  CMakeLists.txt  LICENSE  glad.c  main.c  stb.c
assets/: casa_deprived.mtl  casa_try.mtl  jus_guitar.mtl
dependencies/include/glad/: glad.h
dependencies/lib/: glfw3.lib
entity/: c_light.c  c_light.h  c_mesh.c  c_mesh.h  c_physics.c  c_physics.h  c_texture.c  c_texture.h  c_transform.c  c_transform.h  components.h  control.c  control.h  entity.c  entity.h
rendering/: EBO.c  EBO.h  Mesh.c  Mesh.h  VAO.c  VAO.h  VBO.c  VBO.h  gfx_h.h  post_procesing.c  post_procesing.h  renderer.c  renderer.h  window.c  window.h
shaders/: default.frag  default.vert  frame_buffer.frag  frame_buffer.vert  shader.c  shader.h  sky.frag  sky.vert
utils/: algebra.c  algebra.h  camera.c  camera.h  rand_obj_data.c  rand_obj_data.h  time.h  utils.h
